[package]
name = "multi-harp-patina"
authors = ["Stephen Thornquist"]
version = "0.2.0"
edition = "2021"
license = "LGPL-3.0"
build = "build.rs"
links = "mhlib64"
description = "Rust-based wrapped for the MultiHarp 150 library"
keywords = ["flim", "microscopy", "picoquant"]
rust-version = "1.66.0"

# For conditional compilation of
# functions only when the `MHLib`
# version exceeds a certain value
[features]
nolib = []
default = ["MHLib", "MHLv3_0_0"]
MHLib = []
MHLv3_0_0 = ["MHLib"]
MHLv3_1_0 = ["MHLv3_0_0"]
async = [ "dep:async-trait", "dep:tokio" ]

[[bin]]
name = "example_tttr"
path = "src/bin/tttr.rs"

[[bin]]
name = "example_multithreading"
path = "src/bin/multithreaded_mutex_tttr.rs"

[[bin]]
name = "example_message_passing"
path = "src/bin/multithreaded_message_tttr.rs"

[lib]
name = "multi_harp_patina"
path = "src/lib.rs"
crate-type = ["rlib","dylib"]


[dependencies]
rand = "0.8"
rand_distr = "0.4"
flume = "*"
async-trait = { version = "*", optional = true }
tokio = { version = "*", optional = true, features = ["rt"] }